# linux

./: .clion.cmake  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yml  gdbinit.kernel  kernel_tests.cmake  run-qemu-debug.sh  run-qemu-kernel.sh  run-tests.sh  test_results.txt
.github/workflows/: ci.yml
.run/: linux_kernel.run.xml  test_kernel_mktime.run.xml
include/linux/: config_rel.h  config_ver.h
tests/: test_framework.h
tests/kernel/: test_mktime.c  test_vsprintf.c
tests/lib/: test_ctype.c  test_lib_string.c  test_string.c
tests/mocks/: kernel_mocks.h
